[package]
name = "chromedriver-launch"
version = "0.1.1"
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/d-e-s-o/chromedriver-launch.git"
documentation = "https://docs.rs/chromedriver-launch"
readme = "README.md"
categories = [
  "development-tools::testing",
  "web-programming::http-client",
]
keywords = ["webdriver", "chromedriver", "automation"]
description = """
A crate for launching a chromedriver process.
"""

[dependencies]
anyhow = { version = "1.0.80", default-features = false, features = ["std"] }
libc = { version = "0.2", default-features = false }

[dev-dependencies]
fantoccini = { version = "0.21", default-features = false, features = ["native-tls"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
tempfile = { version = "3.2", default-features = false }
tokio = { version = "1.0", default-features = false, features = ["macros"] }

[lints.rust]
deprecated-safe = "warn"
future-incompatible = "warn"
keyword-idents = "warn"
let-underscore = "warn"
missing-debug-implementations = "warn"
missing-docs = "warn"
trivial-numeric-casts = "warn"
unsafe-op-in-unsafe-fn = "warn"
unused = "warn"

[lints.clippy]
collapsible-else-if = "allow"
collapsible-if = "allow"
let-and-return = "allow"
let-unit-value = "allow"
module-inception = "allow"
type-complexity = "allow"
absolute-paths = "warn"
clone-on-ref-ptr = "warn"
dbg-macro = "warn"
doc-markdown = "warn"
join-absolute-paths = "warn"
large-enum-variant = "warn"
redundant-closure-for-method-calls = "warn"
unchecked-duration-subtraction = "warn"
uninlined-format-args = "warn"
wildcard-imports = "warn"
